<resources>
    <string name="app_name">North-Age</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">North Age Official</string>
    <string name="nav_header_subtitle">support@nage.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayarlar</string>

    <string name="menu_home">Ana Sayfa</string>
    <string name="email">E-posta</string>
    <string name="password">Parola</string>
    <string name="remember_me">Beni hatırla</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="not_a_member">Üye değil misin?</string>
    <string name="sign_up_now">Hemen üye ol!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_about">Hakkımızda</string>
    <string name="todo">todo</string>
    <string name="sign_up">KAYIT OL</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="password_confirm">Parola Tekrar</string>
    <string name="or">YA DA</string>
    <string name="guest_login">MİSAFİR GİRİŞİ</string>
    <string name="default_notification_channel_id">NorthAgeNotify</string>
    <string name="channel_name">North Age</string>
    <string name="channel_description">North Age Bildirimleri</string>
    <string name="ok">Tamam</string>
    <string name="menu_exit">Çıkış</string>
    <string name="products">Ürünler</string>
    <string name="product_detail">Ürün Detayları</string>
    <string name="action_login">Giriş</string>
    <string name="see_reviews">İncelemeleri Gör</string>
    <string name="categories">Kategoriler</string>
    <string name="tags">Etiketler</string>
    <string name="menu_contact">İletişim</string>
    <string name="search">Ara</string>
    <string name="send">Gönder</string>
    <string name="review_information">E-posta hesabınız yayımlanmayacak. Gerekli alanlar * ile işaretlenmişlerdir</string>
    <string name="rate_text">Oyunuz*</string>
    <string name="rate">Incelemeniz</string>
    <string name="rating">İnceleme Yap</string>

    <integer-array name="per_page">
        10,
        20,
        50,
        100
    </integer-array>
</resources>