<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_home_24"
            android:title="@string/menu_home" />
    </group>
    <group
        android:id="@+id/nav_categories"
        android:checkableBehavior="single" />

    <group
        android:checkableBehavior="none"
        android:menuCategory="system">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_outline_info_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_outline_contact_support_24"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_24"
            android:title="@string/menu_exit" />
    </group>
</menu>