<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nage.north_age.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_categories"
            app:destination="@id/nav_categories" />
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_nav_home_to_nav_contact"
            app:destination="@id/nav_contact" />
    </fragment>

    <fragment
        android:id="@+id/nav_products"
        android:name="com.nage.north_age.ui.products.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products">
        <argument
            android:name="categoryID"
            android:defaultValue="0"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_products_to_nav_product_detail"
            app:destination="@id/nav_product_detail" />
    </fragment>
    <fragment
        android:id="@+id/nav_categories"
        android:name="com.nage.north_age.ui.category.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category">
        <argument
            android:name="categoryID"
            android:defaultValue="0"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_categories_to_nav_products"
            app:destination="@id/nav_products" />
    </fragment>
    <fragment
        android:id="@+id/nav_product_detail"
        android:name="com.nage.north_age.ui.productDetail.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail">
        <argument
            android:name="productID"
            android:defaultValue="0"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/nav_about"
        android:name="com.nage.north_age.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about">
        <argument
            android:name="param1"
            android:defaultValue="371"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.nage.north_age.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact">
        <argument
            android:name="param1"
            android:defaultValue="371"
            app:argType="string" />
    </fragment>

</navigation>